fixed overflow of contenteditable

--- a/src/styles.less
+++ b/src/styles.less
@@ -108,7 +108,9 @@ nz-content {
         border-radius: 2px;
         padding: 2px 8px;
         outline: none;
-        line-height: 24px;
+        line-height: 26px;
+        overflow: hidden;
+        text-overflow: ellipsis;
         transition: all .3s;
         &[contenteditable=false] {
             color: #00000040;
